[gradle-getting-started : learning test] Gradle 스크립트 작성 학습 테스트

--- a/gradle-getting-started/app/build.gradle
+++ b/gradle-getting-started/app/build.gradle
@@ -33,3 +33,30 @@ tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
+
+tasks.register('upper') {
+    doLast {
+        String someString = 'mY_nAmE'
+        println "Original: $someString"
+        println "Upper case: ${someString.toUpperCase()}"
+    }
+}
+
+tasks.register('count') {
+    doLast {
+        4.times { println "$it " }
+    }
+}
+
+tasks.register('hello') {
+    doLast {
+        println 'Hello World'
+    }
+}
+
+tasks.register('intro') {
+    dependsOn tasks.hello
+    doLast {
+        println "I'm Gradle"
+    }
+}
