--- a/spring-boot-jpa-example-1/src/main/resources/application.yml
+++ b/spring-boot-jpa-example-1/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/Desktop/Code/jpashop
+#    url: jdbc:h2:tcp://localhost/~/Desktop/Code/jpashop
+    url: jdbc:h2:mem:test
     username: sa
     password:
     driver-class-name: org.h2.Driver
