--- a/spring-boot-jpa-example-1/src/main/resources/application.yml
+++ b/spring-boot-jpa-example-1/src/main/resources/application.yml
@@ -13,7 +13,11 @@ spring:
       hibernate:
 #        show_sql: true
         format_sql: true
+  h2:
+    console:
+      enabled: true
 
 logging.level:
   org.hibernate.SQL: debug
 #  org.hibernate.type: trace
+
