--- a/spring-transactional-and-aop/build.gradle
+++ b/spring-transactional-and-aop/build.gradle
@@ -1,6 +1,4 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.4'
-    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
     id 'java'
 }
 
@@ -19,12 +17,18 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.springframework', name: 'spring-web', version: '5.2.8.RELEASE'
+    implementation group: 'org.springframework', name: 'spring-context', version: '5.2.8.RELEASE'
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.2.8.RELEASE'
+
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    implementation 'mysql:mysql-connector-java:8.0.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
+    testImplementation group: 'org.springframework', name: 'spring-test', version: '5.2.8.RELEASE'
 }
 
 tasks.named('test') {
