--- a/thread-per-request-model-performance-improve-synchronous/src/main/resources/application.yml
+++ b/thread-per-request-model-performance-improve-synchronous/src/main/resources/application.yml
@@ -1,1 +1,15 @@
-
+spring:
+  datasource:
+    url: jdbc:h2:mem:test;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    generate-ddl: false
+    hibernate:
+      ddl-auto: create-drop
+    open-in-view: false
