--- a/thread-per-request-model-performance-improve-synchronous/src/main/resources/application.yml
+++ b/thread-per-request-model-performance-improve-synchronous/src/main/resources/application.yml
@@ -13,3 +13,10 @@ spring:
     hibernate:
       ddl-auto: create-drop
     open-in-view: false
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
+  h2:
+    console:
+      enabled: true
