--- a/java-slf4j-logback/build.gradle
+++ b/java-slf4j-logback/build.gradle
@@ -10,6 +10,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.slf4j:slf4j-api:2.0.6'
+    implementation ('ch.qos.logback:logback-classic:1.4.5') {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+    }
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
