--- a/reactive-streams/build.gradle
+++ b/reactive-streams/build.gradle
@@ -12,6 +12,10 @@ repositories {
 dependencies {
     implementation 'io.projectreactor:reactor-core:3.5.4'
 
+    implementation 'org.slf4j:slf4j-api:2.0.6'
+    implementation ('ch.qos.logback:logback-classic:1.4.5') {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+    }
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
