spring sqs sns : sns config

--- a/spring-boot-aws-sns-sqs/src/main/resources/application.yml
+++ b/spring-boot-aws-sns-sqs/src/main/resources/application.yml
@@ -3,11 +3,8 @@ cloud:
     credentials:
       access-key: accesskey
       secret-key: secretkey
-    region:
-      static: ap-northeast-2
-      auto: false
     stack:
       auto: false
 
 sns-topic:
-  binghe-test-sns: arn:aws:sns:ap-northeast-2:385423560848:binghe-test-sns
+  binghe-test-sns: "arn:aws:sns:ap-northeast-2:385423560848:binghe-test-sns"
