spring sqs sns : sqs event nam

--- a/spring-boot-aws-sns-sqs/src/main/resources/application.yml
+++ b/spring-boot-aws-sns-sqs/src/main/resources/application.yml
@@ -10,4 +10,4 @@ sns-topic:
   binghe-test-sns: "arn:aws:sns:ap-northeast-2:385423560848:binghe-test-sns"
 
 sqs-event:
-  binghe-test-sqs: "arn:aws:sqs:ap-northeast-2:385423560848:binghe-test"
+  binghe-test-sqs: "binghe-test"
