--- a/java-grpc-published-module/build.gradle
+++ b/java-grpc-published-module/build.gradle
@@ -12,8 +12,6 @@ subprojects {
     sourceCompatibility = '11'
 
     repositories {
-        maven { url "https://nexus.baemin.in/repository/maven-release" }
-        maven { url "https://nexus.baemin.in/repository/maven-snapshot" }
         mavenCentral()
     }
 
@@ -21,12 +19,17 @@ subprojects {
         runtimeOnly 'io.grpc:grpc-netty-shaded:1.57.1'
         implementation 'io.grpc:grpc-protobuf:1.57.1'
         implementation 'io.grpc:grpc-stub:1.57.1'
+        implementation 'org.slf4j:slf4j-api:2.0.6'
+        implementation ('ch.qos.logback:logback-classic:1.4.5') {
+            exclude group: 'org.slf4j', module: 'slf4j-api'
+        }
+
         compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // necessary for Java 9+
 
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
         testImplementation 'org.assertj:assertj-core:3.15.0'
-        annotationProcessor 'org.projectlombok:lombok:1.18.24'
+        annotationProcessor 'org.projectlombok:lombok:1.18.30'
     }
 
     test {
