--- a/java-grpc-spring-boot-module/grpc-idl/build.gradle
+++ b/java-grpc-spring-boot-module/grpc-idl/build.gradle
@@ -1,17 +1,47 @@
-plugins {
-    id 'java'
+buildscript {
+    ext {
+        protobufVersion = '3.22.3'
+        protobufPluginVersion = '0.9.4'
+        grpcVersion = '1.57.1'
+    }
 }
 
-group = 'com.binghe'
-version = '1.0-SNAPSHOT'
+plugins {
+    id 'java'
+    id 'com.google.protobuf' version "${protobufPluginVersion}"
+}
+
+group 'com.binghe'
+version '1.0.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
+    implementation "io.grpc:grpc-stub:${grpcVersion}"
+    compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:${protobufVersion}"
+    }
+    plugins {
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc{}
+        }
+    }
+}
+
+jar {
+    enabled = true
 }
 
 test {
