--- a/java-grpc-spring-boot-module/grpc-server/build.gradle
+++ b/java-grpc-spring-boot-module/grpc-server/build.gradle
@@ -1,17 +1,21 @@
 plugins {
+    id 'org.springframework.boot' version '2.7.5'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
 
 group = 'com.binghe'
-version = '1.0-SNAPSHOT'
+version = '1.0.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'net.devh:grpc-server-spring-boot-starter:2.15.0.RELEASE'
+    implementation project(":grpc-idl")
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
