--- a/java-grpc-spring-boot-module/grpc-server/src/main/resources/application.yml
+++ b/java-grpc-spring-boot-module/grpc-server/src/main/resources/application.yml
@@ -1,3 +1,16 @@
 grpc:
   server:
     port: 9090
+
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/test?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+    username: root
+    password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#    hikari:
+#      connection-timeout: 3000
+#      validation-timeout: 3000
+#      minimum-idle: 5
+#      max-lifetime: 240000
+#      maximum-pool-size: 20**
