--- a/spring-boot-testcode-h2/build.gradle
+++ b/spring-boot-testcode-h2/build.gradle
@@ -21,6 +21,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
     implementation 'com.mysql:mysql-connector-j:8.4.0'
     implementation 'com.h2database:h2'
 
