spring-boot-testcode-h2 embedded-redis 적용

--- a/spring-boot-testcode-h2/build.gradle
+++ b/spring-boot-testcode-h2/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    implementation (group: 'it.ozimov', name: 'embedded-redis', version: '0.7.3') {
+        exclude group: 'org.slf4j', module: 'slf4j-simple'
+    }
+
     implementation 'com.mysql:mysql-connector-j:8.4.0'
     implementation 'com.h2database:h2'
 
